--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pytz = "==2018.5"
 redis = "==2.10.6"
 Django = "==2.0.7"
 channels = "==2.1.2"
+channels-redis = "*"
 
 [requires]
 python_version = "3.6"
